--- a/notes.org
+++ b/notes.org
@@ -15,6 +15,12 @@
      -  e.g. ~dow~ for day-of-week, ~dom~ for day-of-month, rather than ~day~, which could be either
           +  And maybe ~dow-num~ or ~dow-name~ to be even clearer
 
+* Tasks
+
+** TODO Ensure timezones are handled properly
+
+Unix timestamps, by definition, are in UTC.  We need to ensure that timezones are handled properly when creating timestamps, so that e.g. a timestamp in a non-UTC timezone is converted to UTC when calling ~ts-parse~.
+
 * Tools
 
 ** Reset all struct accessors
